# velle

./: .gitignore  README.md  claude_mcp_config.json  pyproject.toml  velle.json
docs/: COMMANDS.md  SPEC.md
spike/: inject_parent.py  inject_test.py  read_input.py
src/velle/: __init__.py  audit.py  guardrails.py  http_sidecar.py  injector.py  registry.py  server.py
tests/: conftest.py  test_audit.py  test_guardrails.py  test_injector.py  test_phase23.py  test_registry.py  test_server.py  test_sidecar.py
