[project]
name = "velle"
version = "0.1.0"
description = "Self-prompting MCP tool for Claude Code — the agent wills its next action"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/velle"]

[project.scripts]
velle = "velle.server:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
